--- a/CSS Files/Landing Page.css
+++ b/CSS Files/Landing Page.css
@@ -6,7 +6,7 @@ body {
     box-sizing: border-box;
 }
 
-.landing-section {
+#landing-section {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,6 +102,7 @@ body {
 
 .discover:hover svg {
     background-color: var(--darker-white-button-bg);
+    cursor: pointer;
 }
 
 .action-buttons p {
@@ -118,7 +119,7 @@ body {
 }
 
 .color-settings-1::after {
-    border: 3px solid var(--light-white-button-bg); 
+    border: 3px solid var(--darker-white-button-bg); 
 }
 
 #discover-section {
@@ -409,6 +410,78 @@ body {
     animation: blink 0.7s infinite;
 }
 
+.nav-style{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 5vh;
+    width: 100%;
+    overflow: hidden;
+    background-color: rgba(255,255, 255, 0);
+    z-index: 1000;
+    transition: background-color 0.3s ease;
+    margin-top: -10px;
+    padding: 2vh;
+}
+
+.nav-style.transparent {
+    background-color: rgba(204, 193, 165, 0.2);
+    backdrop-filter: blur(5px);
+}
+
+.hidden-nav-section{
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.visible-nav-section{
+    opacity: 1;
+    visibility: visible;
+}
+
+.nav-items-left{
+    width: 50vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.nav-logo{
+    width: 6%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.nav-items-left h2{
+    margin-top: 25px;
+    color: var(--beige);
+    font-weight: normal;
+    font-style: italic;
+}
+
+.nav-items-right{
+    width: 40vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.color-settings-2 {
+    background-color: var(--light-blue-button-bg);
+    margin-right: 10px;
+}
+
+.color-settings-2 a {
+    color:white;
+}
+
+.color-settings-2::after {
+    border: 3px solid var(--darker-blue-button-bg); 
+}
+
 @keyframes blink {
     0%, 100% {
         opacity: 1;
@@ -419,6 +492,22 @@ body {
 }
 
 @media (max-width: 950px){
+    .nav-style{
+        padding-top: 2.5vh;
+    }
+
+    .nav-items-right a{
+        font-size: 2vh;
+    }
+
+    .nav-items-left h2{
+        color: var(--pale-teal);
+    }
+
+    .nav-logo{
+        display: none;
+    }
+
     .website-overview{
         width: 100vw;
         height: 90vh;
