Finished the signup-login pages

--- a/CSS Files/Global CSS.css
+++ b/CSS Files/Global CSS.css
@@ -38,6 +38,10 @@
 
     --light-blue-button-bg: rgba(57, 74, 92, 0.5);
     --darker-blue-button-bg: rgba(57, 74, 92, 0.7);
+
+    --label-size: 1.2rem;
+    --input-padding: 3%;
+    --input-margin: 1%;
 }
 
 /*MAIN STYLING*/
