Made things responsive

--- a/CSS Files/Signup-Login Pages.css
+++ b/CSS Files/Signup-Login Pages.css
@@ -5,7 +5,7 @@ body{
 }
 
 .nav-style{
-    padding-top: 1.5%;
+    padding-top: 3vh;
 }
 
 .user-container{
@@ -191,4 +191,95 @@ body{
 
 button {
     transition: background-color 0.3s ease;
+}
+
+.or-login-section {
+    display: none;
+    margin-top: 5vh;
+    padding: 1vh;
+    text-align: center;
+    border-top: 1px solid var(--deep-brown);
+}
+
+.or-login-section p {
+    font-size: 3vh;
+}
+
+.or-login-section form {
+    margin-top: 1rem;
+}
+
+.or-login-section input {
+    width: 80%;
+    padding: var(--input-padding);
+    margin-top: var(--input-margin);
+    background-color: rgba(232, 228, 212, 0.3);
+    border: none;
+}
+
+@media (max-width: 950px) {
+    body{
+        background-color: var(--light-gray);
+    }
+
+    .nav-style.transparent{
+        background-color: rgba(77, 77, 77, 0.1);
+        backdrop-filter: blur(5px);
+    }
+    
+    .nav-items-left h2{
+        margin-top: 25px;
+        color: var(--dark-blue);
+        font-weight: normal;
+        font-style: italic;
+    }
+
+    .nav-logo{
+        display: none;
+    }
+
+    .colored-section{
+        display: none;
+    }
+    
+    .user-container {
+        background-color: var(--light-gray);
+        flex-direction: column;
+        margin-left: -2vw;
+        height: auto;
+        width: 100%;
+    }
+
+    .underline{
+        border-color: var(--deep-brown);
+    }
+
+    .section {
+        width: 100%;
+    }
+
+    .colored-section, .section-2 {
+        width: 100%;
+        height: auto;
+    }
+
+    .signup-login-form input {
+        width: 100%;
+    }
+
+    .or-login-section input {
+        width: 100%;
+    }
+
+    .or-login-section {
+        display: flex;
+        text-align: left;
+        flex-direction: column;
+        align-content: flex-start;
+        justify-items: space-evenly;
+    }
+
+    .or-login-section p{
+        color: var(--olive-green);
+    }
 }
