--- a/CSS Files/Nav - Footer CSS.css
+++ b/CSS Files/Nav - Footer CSS.css
@@ -227,6 +227,11 @@
 }
 
 @media (max-width: 750px){
+    .nav-items-right{
+        width: 60vw;
+        margin-right: 3vw;
+    }
+
     .footer-section1{
         margin-top: 1vh;
     }
