--- a/CSS Files/Global CSS.css
+++ b/CSS Files/Global CSS.css
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Josefin Sans', sans-serif;
 }
 
-p, a{
+p, a, label, input, textarea{
     font-family: 'Afacad Flux', sans-serif;
 }
 
