--- a/CSS Files/Landing Page.css
+++ b/CSS Files/Landing Page.css
@@ -138,7 +138,7 @@ body {
 .web-title {
     width: 100%;
     height: 50vh; 
-    background-image: url('/Image Assets/Landing Page/beige-semi-circle.png');
+    background-image: url('Image Assets/Landing Page/beige-semi-circle.png');
     background-repeat: no-repeat;
     background-size: contain; 
     background-position: top center; 
