--- a/CSS Files/Landing Page.css
+++ b/CSS Files/Landing Page.css
@@ -62,7 +62,7 @@ body {
 
 .banner-image {
     position: relative;
-    background-image: url('../Image%Assets/Landing%Page/laptop-with-notes.jpg');
+    background-image: url('../Image%20Assets/Landing%20Page/laptop-with-notes.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -138,7 +138,7 @@ body {
 .web-title {
     width: 100%;
     height: 50vh; 
-    background-image: url('../Image%Assets/Landing%Page/beige-semi-circle.png');
+    background-image: url('../Image%20Assets/Landing%20Page/beige-semi-circle.png');
     background-repeat: no-repeat;
     background-size: contain; 
     background-position: top center; 
