some more fixes

--- a/CSS Files/Landing Page.css
+++ b/CSS Files/Landing Page.css
@@ -524,7 +524,7 @@ body {
 
 @media (max-width: 750px) {
     .nav-style {
-        padding-top: 4vh;
+        padding-top: 2vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -537,7 +537,7 @@ body {
     }
 
     .nav-items-right a {
-        font-size: 2vh;
+        font-size: 10px;
         margin: 0 10px;
     }
 
@@ -584,7 +584,6 @@ body {
 
     .infinite-slider {
         height: 15vh;
-        margin-bottom: 5vh;
     }
 
     .wrapper-1 {
@@ -647,8 +646,11 @@ body {
 
     .mindflow-card-list {
         display: flex;
-        flex-direction: column;
         align-items: center;
+    }
+
+    .button-deco{
+        display: none;
     }
 
     .mindflow-card-list .mindflow-card-item .mindflow-card-link {
@@ -674,7 +676,6 @@ body {
     .journey-section {
         flex-direction: column;
         height: auto;
-        margin: 0 2vw 5vh;
     }
 
     .journey-video, .journey-overview {
@@ -686,7 +687,7 @@ body {
     }
 
     .journey-overview {
-        padding: 5vh var(--items-padding);
+        padding: 10px;
         text-align: center;
     }
 
