--- a/CSS Files/User Dashboard Page.css
+++ b/CSS Files/User Dashboard Page.css
@@ -224,4 +224,12 @@ body {
     .d-md-inline {
         display: none !important;
     }
+
+    .add-items h6{
+        display: none;
+    }
+
+    .custom-margin{
+        margin-bottom: 2%;
+    }
 }
